Multiline 3D Text saved while in edit mode breaks on load #37543

Closed
opened 2013-11-19 22:38:44 +01:00 by Nathan Letwory · 6 comments
Member

System Information
Windows 7 Ultimate 64-bit, 2x ATi HD 5550

Blender Version
Broken: Blender 2.69 5edf6fc. Also broken in 2.68 r60254
Worked: unknown

Short description of error

Opening a .blend which had 3D text in edit mode and has multiple lines has the 3D text object content broken.

Exact steps for others to reproduce the error

  • Add a 3D text
  • Enter a few lines of text like:
  Text<Enter>Another Line<Enter>And Another Line<Enter>
  • Save the .blend while the 3D text object is still in edit mode.
  • Reopen the .blend
**System Information** Windows 7 Ultimate 64-bit, 2x ATi HD 5550 **Blender Version** Broken: Blender 2.69 5edf6fc. Also broken in 2.68 r60254 Worked: unknown **Short description of error** Opening a .blend which had 3D text in edit mode and has multiple lines has the 3D text object content broken. **Exact steps for others to reproduce the error** - Add a 3D text - Enter a few lines of text like: ``` Text<Enter>Another Line<Enter>And Another Line<Enter> ``` - Save the .blend while the 3D text object is still in edit mode. - Reopen the .blend
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jesterking

Added subscriber: @jesterking
Campbell Barton self-assigned this 2013-11-20 15:02:08 +01:00

This issue was referenced by blender/blender-addons-contrib@d232486b40

This issue was referenced by blender/blender-addons-contrib@d232486b4093fbc306dadbc21bd3fde81284364d

This issue was referenced by d232486b40

This issue was referenced by d232486b4093fbc306dadbc21bd3fde81284364d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d232486b40.

Closed by commit d232486b40.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37543
No description provided.