Fix T37543: Multiline 3D Text saved in edit mode breaks on load